--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="/social pages/home.html" frameborder="0" name="tela" id="tela">
+            <iframe src="socialpages/home.html" frameborder="0" name="tela" id="tela">
                 Seu navegador não é compatível com isso
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="/social pages/home.html" target="tela">
+            <a href="socialpages/home.html" target="tela">
                 <img src="imagens/logo-home.jpg" alt="Home">
             </a><br>
-            <a href="/social pages/youtube.html" target="tela">
+            <a href="socialpages/youtube.html" target="tela">
                 <img src="imagens/logo-youtube.jpg" alt="YouTube">
             </a><br>
-            <a href="/social pages/git-hub.html" target="tela">
+            <a href="socialpages/git-hub.html" target="tela">
                 <img src="imagens/logo-github.jpg" alt="GitHub">
             </a><br>
-            <a href="/social pages/instagram.html" target="tela">
+            <a href="socialpages/instagram.html" target="tela">
                 <img src="imagens/logo-instagram.jpg" alt="Instagram">
             </a><br>
-            <a href="/social pages/twittter.html" target="tela">
+            <a href="socialpages/twittter.html" target="tela">
                 <img src="imagens/logo-twitter.jpg" alt="Twitter">
             </a><br>
-            <a href="/social pages/facebook.html" target="tela">
+            <a href="socialpages/facebook.html" target="tela">
                 <img src="imagens/logo-facebook.jpg" alt="Facebook">
             </a>
         </section>
