--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="socialpages/home.html" frameborder="0" name="tela" id="tela">
+            <iframe src="socialpages/index.html" frameborder="0" name="tela" id="tela">
                 Seu navegador não é compatível com isso
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="socialpages/home.html" target="tela">
+            <a href="socialpages/index.html" target="tela">
                 <img src="imagens/logo-home.jpg" alt="Home">
             </a><br>
             <a href="socialpages/youtube.html" target="tela">
